[package]
name = "flint"
version = "0.1.0"
authors = ["ONLYIWIN21 <flintthecuber@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.6", features = ["router"] }
dioxus-feather-icons = "0.2.4"
manganis = "0.7.6"

[features]
default = ["web"]
web = ["dioxus/web"]
